--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -38,11 +39,19 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.fragment:fragment-ktx:1.3.5"
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 
     implementation 'com.google.android.material:material:1.4.0'
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.12.0"
+    implementation "jp.wasabeef:glide-transformations:4.3.0"
+    implementation 'jp.co.cyberagent.android:gpuimage:2.1.0'
+    kapt "com.github.bumptech.glide:compiler:4.12.0"
 
     testImplementation 'junit:junit:4.13.2'
 
